feat: Implement ETL pipeline for Firestore to Google Sheets
- Added ColumnRenamer class for renaming DataFrame columns based on exact and prefix mappings.
- Created Settings dataclass to manage environment configurations.
- Developed FirestoreClient for connecting to Firestore and retrieving documents.
- Implemented logging utilities for consistent logging throughout the application.
- Built runner module to orchestrate the ETL process, including data extraction, transformation, and loading into Google Sheets.
- Introduced GoogleSheetsClient for managing interactions with Google Sheets.
- Developed transformer module to convert Firestore documents into structured DataFrames.
- Established services for Firestore and Sheets to encapsulate business logic.
- Added pipeline module to coordinate the entire ETL process with proper logging and error handling.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
-FIREBASE_CREDENTIALS_PATH=.creds/cred.json
+FIREBASE_CREDENTIALS_PATH=
 FIRESTORE_COLLECTION_NAME=
-OUTPUT_FILE=nombre.xlsx
-LOG_LEVEL=INFO
+
+GOOGLE_SHEETS_CREDENTIALS_PATH=
+GOOGLE_SHEET_ID=
+
+SERVERS_SHEET_NAME=
+CAMERAS_SHEET_NAME=
+
+LOG_LEVEL=
 LIMIT=
 LOG_EVERY=
