--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,6 @@ sheets:
       "server_stats_status_server": 
         name: "Estado Servidor"
         format: "TEXT"
-        # Si es diferente de "online" debería ponerse rojo en la planilla
         threshold:
           operator: "!="
           value: "ok"
@@ -46,20 +45,21 @@ sheets:
       "server_stats_disk_usage_pct": 
         name: "Uso Disco (%)"
         format: "NUMBER"
-        # EJEMPLO: Alerta si el disco supera el 90%
         threshold:
           operator: ">"
-          value: 90
+          value: 85
       "server_stats_cpu_usage_pct": 
         name: "Uso CPU (%)"
         format: "NUMBER"
-        # EJEMPLO: Alerta si CPU supera 95%
         threshold:
           operator: ">"
-          value: 95
+          value: 80
       "server_stats_ram_usage_pct": 
         name: "Uso RAM (%)"
         format: "NUMBER"
+        threshold:
+          operator: ">"
+          value: 80
       "server_stats_cpu_temperature_celsius": 
         name: "Temperatura CPU (°C)"
         format: "NUMBER"
@@ -80,9 +80,15 @@ sheets:
       "process_duration_sec": 
         name: "Duración Proceso (s)"
         format: "INTEGER"
+        threshold:
+          operator: ">"
+          value: 120
       "server_stats_uptime_days": 
         name: "Uptime (días)"
         format: "INTEGER"
+        threshold:
+          operator: ">"
+          value: 15
       "server_stats_timestamp_boot": 
         name: "Boot Sistema (Chile)"
         format: "DATE_TIME"
@@ -126,10 +132,13 @@ sheets:
         format: "NUMBER"
         threshold:
           operator: ">"
-          value: 20
+          value: 30
       "rotation_duration_min":
         name: "Duración rotación (min)"
         format: "NUMBER"
+        threshold:
+          operator: ">"
+          value: 10
       
       # Fechas
       "timestamp_last_image":
