--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,6 @@ sheets:
     tab_name: "servidores"
     history_tab: "historial_servidores"
     title: "Monitor de Servidores Raptor"
-    # merge_column ELIMINADO
     columns:
       # 1. Servidor
       "Server Name": 
@@ -98,7 +97,7 @@ sheets:
           operator: ">"
           value: 15
 
-      # 15. Fecha consulta (ESTA ES LA CORRECTA DE LA BD)
+      # 15. Fecha consulta
       "timestamp_query_dt": 
         name: "Fecha consulta"
         format: "DATE_TIME"
@@ -116,7 +115,6 @@ sheets:
     tab_name: "camaras"
     history_tab: "historial_camaras"
     title: "Monitor de Cámaras"
-    # merge_column ELIMINADO
     columns:
       # 1. Servidor
       "Server Name":
@@ -162,7 +160,7 @@ sheets:
         name: "Última imagen (Chile)"
         format: "DATE_TIME"
       
-      # 8. Fecha - hora consulta (ESTA ES LA CORRECTA DE LA BD)
+      # 8. Fecha - hora consulta
       "timestamp_query_dt":
         name: "Fecha - hora consulta"
         format: "DATE_TIME"
